fix: top align weather info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,8 +290,16 @@ span.data-value {
   text-align: right;
 }
 
+/* Temperature font size: 2.5rem default, 3rem on large screens */
 .right-col #temp > span {
   font-size: 2.5rem;
+}
+
+@media (min-width: 992px) {
+  .right-col #temp > span {
+    font-size: 3rem;
+    line-height: 1;
+  }
 }
 
 .card.bg-dark {
@@ -312,11 +320,13 @@ span.data-value {
 
 .rain-coverage-box {
   min-height: 80px;
+  font-size: 1.2rem;
 }
 
 .time-box > div {
   width: 100%;
   text-align: center;
+  padding-bottom: 1rem;
 }
 .location-name > div {
   width: 100%;
@@ -331,6 +341,7 @@ span.data-value {
   .time-box > div {
     width: 100%;
     text-align: left;
+    line-height: 1;
   }
   .location-name > div {
     width: 100%;
